--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <form>
-      <input id="" type="text" name="" placeholder="">
-      <button type="submit" class="" id=""></button>
+      <input id="quantity" type="text" name="quantity" placeholder="enter the amount to be converted">
+      <button type="submit" id="formBtn">convert</button>
     </form>
     <div id="response">
     </div>
