troubleshoot form button

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
     <form>
         <input class='button' id="quantity" type="text" name="quantity" placeholder="enter the amount to be converted">
         <div class='button'>
-          <button type="click" id="baseCurrencyBtn">base currency</button>
+          <button type="button" id="baseCurrencyBtn">base currency</button>
           <div>&#129058</div>
         </div>
         <div class='button'>
-          <button type="click" id="targetCurrencyBtn">target currency</button>
+          <button type="button" id="targetCurrencyBtn">target currency</button>
           <div>&#129058</div>
         </div>
         <div class='button'>
-          <button type="submit" id="formBtn">convert</button>
+          <button type="button" id="formBtn">convert</button>
           <div>&#129058</div>
         </div>
     </form>
