reroute values of calculate function, use parseInt to fix type

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div class="container">
 
     <form>
-        <input class='button' id="quantity" type="text" name="quantity" placeholder="enter the amount to be converted">
+        <input class='button' id="quantity" type="text" name="quantity" placeholder="enter amount">
         <div class='button'>
           <button type="button" id="baseCurrencyBtn">base currency</button>
           <div>&#129058</div>
@@ -24,13 +24,13 @@
         </div>
     </form>
     <div id='grid'>
-      <div id='baseCurrency'> 
-      </div>
-      <div id='targetCurrency'>
-      </div>
       <div id='responseArea'>
         <div id='response'>
         </div>
+      </div>
+      <div id='baseCurrency'> 
+      </div>
+      <div id='targetCurrency'>
       </div>
     </div>
     
