--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
         <input class='button' id="quantity" type="text" name="quantity" placeholder="enter amount">
         <div class='button'>
           <button type="button" id="baseCurrencyBtn">base currency</button>
-          <div>&#129058</div>
+          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
         </div>
         <div class='button'>
           <button type="button" id="targetCurrencyBtn">target currency</button>
-          <div>&#129058</div>
+          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
         </div>
         <div class='button'>
           <button type="button" id="formBtn">convert</button>
-          <div>&#129058</div>
+          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
         </div>
     </form>
     <div id='grid'>
