dealt with error handling and double currency selection problem

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
         </div>
         <div class='button'>
-          <button type="button" id="formBtn">convert</button>
+          <button type="submit" id="formBtn">convert</button>
           <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
         </div>
     </form>
