--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <input class='button' id="quantity" type="text" name="quantity" placeholder="enter amount">
         <div class='button'>
           <button type="button" id="baseCurrencyBtn">base currency</button>
-          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
+          <div><img id="arrow" src="4752d98c36cb20cbe3ba.svg" alt="an arrow"></div>
         </div>
         <div class='button'>
           <button type="button" id="targetCurrencyBtn">target currency</button>
-          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
+          <div><img id="arrow" src="4752d98c36cb20cbe3ba.svg" alt="an arrow"></div>
         </div>
         <div class='button'>
           <button type="submit" id="formBtn">convert</button>
-          <div><img id="arrow" src="./assets/images/arrow.svg" alt="an arrow"></div>
+          <div><img id="arrow" src="4752d98c36cb20cbe3ba.svg" alt="an arrow"></div>
         </div>
     </form>
     <div id='grid'>
@@ -35,5 +35,5 @@
     </div>
     
   </div>
-</body>
+<script defer src="bundle.js"></script></body>
 </html>
